# next-trade-v1.0

./: .gitignore  .gitignore.next_trade  10MIN_AUTO_STRATEGY_EXECUTION_REPORT.md  1year_simulation_fact_report.json  24HOUR_FUTURES_TEST_TERMINATION.md  24hour_futures_trading_fixed_20260406_044921.json  24hour_futures_trading_fixed_20260406_044946.json  24hour_futures_trading_fixed_20260406_045819.json  30min_test_fact_report.json  ACCOUNT_POSITION_ANALYSIS.md  AKEUSDT_DIRECT_STOP_REPAIR_20260410.json  API_KEYS_SETUP_COMPLETE.md  AUTO_STRATEGY_SYSTEM_REPORT.md  BINANCE_CAPITAL_CONFIRMATION_REPORT.md  BINANCE_POSITION_CHECK_REPORT.md  BINANCE_REAL_DATA_CONFIRMATION.md  BINANCE_TESTNET_EXECUTION_PLAN.md  BINANCE_TESTNET_REAL_INVESTOR_TEST.md  BINANCE_TESTNET_VALIDATION_REPORT.md  BINANCE_TESTNET_VERIFICATION.md  BINANCE_VOLUME_ANALYSIS_KOREAN_REPORT.md  CANDY_EVIDENCE_VERIFY_1_보고서.md  COMPLETE_MODULARIZATION_REPORT.md  CRITICAL_FIXES_COMPLETION_REPORT.md  CURRENT_INVESTMENT_STATUS.md  DEPLOYMENT_REPORT.md  EMPIRICAL_RUNTIME_EVALUATION.json  EMPIRICAL_RUNTIME_EVALUATION.md  EXCHANGE_DATA_CONFIRMATION_REPORT.md  EXCHANGE_DATA_SYNC_REPORT.md  EXECUTE_FIRST_CHECKPOINT_20260409.json  EXECUTE_FIRST_CHECKPOINT_20260410.json  EXECUTE_FIRST_CHECKPOINT_20260410_STEP10.json  EXECUTE_FIRST_CHECKPOINT_20260410_STEP11.json  EXECUTE_FIRST_CHECKPOINT_20260410_STEP11_VERIFY.json  EXECUTE_FIRST_CHECKPOINT_20260410_STEP12.json  EXECUTE_FIRST_CHECKPOINT_20260410_STEP13_MAX10.json  EXECUTE_FIRST_CHECKPOINT_20260410_STEP13_MAX10_VERIFY.json  (+476 more)
BOOT/: apply_reversible_hold_rename.ps1  boot_config.env  (+57 more)
(+749 files in other folders)
