[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "next-trade"
version = "0.23.0"
description = "NEXT-TRADE: Advanced Async Streaming Trading Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NEXT-TRADE Team", email = "team@next-trade.dev"},
]

dependencies = [
    "binance-connector>=3.7.0",
    "websockets>=12.0",
    "aiohttp>=3.9.1",
    "pydantic>=2.5.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pytest>=9.0.2",
    "win10toast-click>=0.1.2",
]

[tool.setuptools]
packages = ["next_trade"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
